@@ -1,5 +1,5 @@
 #ifndef lint
-static const char	RCSid[] = "$Id: persist.c,v 2.36 2004/09/19 07:24:37 greg Exp $";
+static const char	RCSid[] = "$Id: persist.c,v 2.37 2005/01/21 00:52:59 greg Exp $";
 #endif
 /*
  * Routines for persistent rtrace and rpict processes.
@@ -121,10 +121,10 @@ pfhold(void)		/* holding pattern for idle rendering process */
 	char	buf[512];
 	register int	n;
 				/* close input and output descriptors */
-	close(fileno(stdin));
-	close(fileno(stdout));
+	close(0);
+	close(1);
 	if (errfile == NULL)
-		close(fileno(stderr));
+		close(2);
 				/* create named pipes for input and output */
 	if (mkfifo(mktemp(strcpy(inpname,TEMPLATE)), 0600) < 0)
 		goto createrr;
